[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/debug-menu/Debug.gd" type="Script" id=1]

[node name="Debug" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
margin_left = 886.0
margin_top = 518.0
margin_right = 1034.0
margin_bottom = 562.0

[node name="WinBtn" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_right = 148.0
margin_bottom = 20.0
text = "Win Battle"

[node name="UnlockCombBtn" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 148.0
margin_bottom = 44.0
text = "Unlock Combinations"
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/WinBtn" to="." method="_on_WinBtn_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/UnlockCombBtn" to="." method="_on_UnlockCombBtn_pressed"]
